Refactor responses and answers, add new types of questions