@@ -1,11 +1,10 @@
 package ru.hh.kakdela.v2.mapper;
 
-import java.util.Comparator;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import ru.hh.kakdela.v2.dto.question.QuestionResponseDto;
-import ru.hh.kakdela.v2.model.AnswerOption;
 import ru.hh.kakdela.v2.model.Question;
 import ru.hh.kakdela.v2.service.ObjectStorageService;
 
@@ -37,13 +36,14 @@ public class QuestionMapper {
         question.getAnswerOptionOrder() != null
             ? question.getAnswerOptionOrder().name()
             : null,
+        question.hasOtherOption(),
         question.isMandatory(),
         question.isVisible(),
         question.getCondition(),
         question.getAnswerOptions().stream()
-            .sorted(Comparator.comparingInt(AnswerOption::getSerialNumber))
             .map(answerOptionMapper::answerOptionToDto)
-            .toList()
-    );
+            .collect(Collectors.collectingAndThen(
+               Collectors.toList(),
+               question.getAnswerOptionOrder().function)));
   }
 }
